[gd_scene load_steps=3 format=3 uid="uid://cklctjmf0gc1f"]

[ext_resource type="Script" uid="uid://ct8apds776hne" path="res://scripts/session_settings_screen.gd" id="1_ejqx4"]
[ext_resource type="PackedScene" uid="uid://tmvhsvwnvkx6" path="res://scenes/button.tscn" id="2_mjri0"]

[node name="SessionSettingsScreen" type="Node2D"]
script = ExtResource("1_ejqx4")

[node name="ScreenName" type="RichTextLabel" parent="."]
offset_top = 40.0
offset_right = 360.0
offset_bottom = 80.0
theme_override_font_sizes/normal_font_size = 20
text = "Ustawienia sesji"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CategoryLabel" type="RichTextLabel" parent="."]
offset_top = 80.0
offset_right = 360.0
offset_bottom = 120.0
theme_override_font_sizes/normal_font_size = 20
text = "Kategoria: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguagesLabel" type="RichTextLabel" parent="."]
offset_top = 120.0
offset_right = 360.0
offset_bottom = 160.0
theme_override_font_sizes/normal_font_size = 20
text = "Języki: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="WordsNumberLabel" type="RichTextLabel" parent="."]
offset_top = 160.0
offset_right = 360.0
offset_bottom = 200.0
theme_override_font_sizes/normal_font_size = 20
text = "Liczba słówek: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="CategoryMenuButton" type="MenuButton" parent="."]
offset_left = 40.0
offset_top = 250.0
offset_right = 320.0
offset_bottom = 310.0
text = "Kategorie"
flat = false

[node name="LanguageOneMenuButton" type="MenuButton" parent="."]
offset_left = 40.0
offset_top = 320.0
offset_right = 320.0
offset_bottom = 380.0
disabled = true
text = "Język pierwszy"
flat = false
autowrap_mode = 3

[node name="LanguageTwoMenuButton" type="MenuButton" parent="."]
offset_left = 40.0
offset_top = 390.0
offset_right = 320.0
offset_bottom = 450.0
disabled = true
text = "Język drugi"
flat = false

[node name="ReturnButton" parent="." instance=ExtResource("2_mjri0")]
offset_left = 40.0
offset_top = 520.0
offset_right = 180.0
offset_bottom = 580.0

[node name="RichTextLabel" parent="ReturnButton" index="1"]
text = "Powrót"

[node name="NextButton" parent="." instance=ExtResource("2_mjri0")]
offset_left = 180.0
offset_top = 520.0
offset_right = 320.0
offset_bottom = 580.0

[node name="RichTextLabel" parent="NextButton" index="1"]
text = "Dalej"

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]

[editable path="ReturnButton"]
[editable path="NextButton"]
